--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.0.0</version>
+            <scope>compile</scope>
         </dependency>
 
 
