--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0</version>
 
     <organization>
-        <name>Example Company</name>
+        <name>Totally Tot</name>
         <url>http://www.example.com/</url>
     </organization>
 
